lab18/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-mysql
spec:
  podSelector:
    matchLabels:
      app: mysql       # نطبق السياسة على البودات اللي فيها label app=mysql
  policyTypes:
  - Ingress           # نتحكم بس في ال incoming traffic
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nodejs  # بس البودات اللي فيها NodeJS يقدروا يوصلوا
    ports:
    - protocol: TCP
      port: 3306       # بس على البورت 3306
